Upload dataset for A1

--- a/A1.html
+++ b/A1.html
@@ -529,9 +529,9 @@ h2 {
       <p>In this assignment, you will design a visualization for a small data set and provide a rigorous rationale for your design choices. You should in theory be ready to explain the contribution of <em>every pixel</em> in the display. You are free to use any graphics or charting tool you please - including drafting it by hand. However, you may find it most instructive to create the chart from scratch using a graphics API of your choice.
       </p>
 
-      <p>
+      <!-- <p>
         (See <a href="resources.html">Resources</a> for a list of visualization tools.)
-      </p>
+      </p> -->
 
       <h2>Data Set: U.S. Population, 1900 vs. 2000</h2>
 
@@ -554,7 +554,7 @@ h2 {
 
       <h2>Grading</h2>
 
-      <p>The assignment score is out of a maximum of 10 points. Historically, the median score on this assignment has been 8.5, which corresponds to an A-. We will determine scores by judging both the soundness of your design and the quality of the write-up. We will also look for consideration of audience, message and intended task. Here are examples of aspects that may lead to point deductions:</p>
+      <p><!-- The assignment score is out of a maximum of 10 points. Historically, the median score on this assignment has been 8.5, which corresponds to an A-. --> We will determine scores by judging both the soundness of your design and the quality of the write-up. We will also look for consideration of audience, message and intended task. Here are examples of aspects that may lead to point deductions:</p>
 
       <ul>
         <li>Use of misleading, unnecessary, or unmotivated graphic elements.
