Make section header bigger

--- a/index.html
+++ b/index.html
@@ -235,6 +235,10 @@
         padding-left: 25px;
       }
     }
+
+    .section-header {
+      font-size: 19px;
+    }
     </style>
   <script type="text/javascript">
     // hide mavo menu when the user is not logged in. 
@@ -316,7 +320,7 @@
           </div>
         </div>
       </div>
-  Spring 2019 &#183; MW1 (34-101) &#183; <a href='https://piazza.com/class/jrc6epsrssu1in'>Piazza</a>
+  Spring 2019 &#183; MW230 (32-124) &#183; <a href='https://piazza.com/class/jrc6epsrssu1in'>Piazza</a> &#183; <a href='https://stellar.mit.edu/S/course/6/sp19/6.894/'>Stellar</a>
   <p property='intro' mv-edit-placeholder="(course intro)"></p>
   
 
@@ -333,10 +337,7 @@
       <div class="description">
         <h1>Arvind Satyanarayan</h1>
         <h2>Instructor</h2>
-        <p> </p>
-        <p class="read-more">
-          <a href="#">Learn More</a>
-        </p>
+        <p>OH: TBA @ 32-G7xx<br>Contact: <a href="mailto:arvindsatya@mit.edu">arvindsatya@mit.edu</a></p>
       </div>
     </div>
     <div class="blog-card alt">
@@ -344,14 +345,13 @@
         <div class="photo" style="background-image: url(imgs/headshot.JPG)"></div>
         <ul class="details">
           <li><a href="#">OH: </a></li>
-          <li>Office: 32-G580</li>
-          <li>Contact: <a href="mailto:soya@mit.edu">soya@mit.edu</a></li>
+          <!-- <li>Office: 32-G580</li> -->
         </ul>
       </div>
       <div class="description">
         <h1>Soya Park</h1>
         <h2>TA</h2>
-        <p></p>
+        <p>OH: TBA @ 32-G580<br>Contact: <a href="mailto:soya@mit.edu">soya@mit.edu</a></p>
         <p class="read-more">
           <a href="http://people.csail.mit.edu/soya/">Learn More</a>
         </p>
@@ -361,8 +361,7 @@
 
 
   <br>
-  <b> Schedule & Readings</b><br>
-
+  <b class="section-header"> Schedule & Readings</b><br>
 
     <div class="day" id="lec-value" property='lecture' mv-multiple>
       <div>
@@ -388,7 +387,7 @@
     </div>
 
     <br>
-  <b> Grading </b><br><p>
+  <b class="section-header"> Grading </b><br><p>
 
   </p><ul property='grading'>
    <li mv-multiple property='category'>
@@ -396,11 +395,11 @@
     </li>
   </ul>
 
-  <b> Class Participation </b><br>
+  <b class="section-header"> Class Participation </b><br>
      <p property='participation' mv-edit-placeholder="(Class Participation)"></p>
   <p>
 
-  <b>Resources</b><br>
+  <b class="section-header">Resources</b><br>
      <p property='resources' mv-edit-placeholder="(resources)"></p>
   </p>
 
