Make schedule as table

--- a/A1.html
+++ b/A1.html
@@ -1,7 +1,7 @@
 <!-- Author: Soya Park, soya@mit.edu -->
 <html>
   <head>  
-    <title>6.894: Interactive Data Viz (Spring 2019)</title>
+    <title>6.894: Interactive Data Visualization (Spring 2019)</title>
     <link href='//fonts.googleapis.com/css?family=Raleway:400,300,200,700&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
     <link href='//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif|PT+Serif" rel="stylesheet">
@@ -10,46 +10,7 @@
     <link rel="stylesheet" href="mavo.css">
     <link rel="stylesheet" href="viz-font.css">
     <link rel="stylesheet" href="header.css">
-    <style>
-    body {
-      font-family: 'Noto Serif', serif;
-      margin: 2rem;
-    }
-
-    a {
-      color: skyblue;
-      cursor: pointer;
-    }
-
-    .conference {
-      margin-left: 30;
-    }
-
-    .mv-bar.mv-ui{
-      display:none;
-    }
-
-    .ellen-container img {
-      height: 200;
-    }
-
-    /*PEN STYLES*/
-    * {
-      box-sizing: border-box;
-    }
-
-    .row {
-      display:flex;
-    }
-
-    .date {
-      color:skyblue;
-    }
-
-    .assignment {
-      margin-left: 10px;
-    }
-    </style>
+    <link rel="stylesheet" href="style.css">
   <script type="text/javascript">
     // hide mavo menu when the user is not logged in. 
     $( document ).ready(function() {
@@ -117,7 +78,7 @@
       
             <h1>
               <span style="color:#cc5200;">6.894</span>
-              : Interactive Data Viz
+              : Interactive Data Visualization
             </h1>
           </a>
         </div>
@@ -129,7 +90,7 @@
           </div>
         </div>
       </div>
-  Spring 2019 &#183; MW1 (34-101) &#183; <a href='https://piazza.com/class/jrc6epsrssu1in'>Piazza</a> &#183; <a href='https://stellar.mit.edu/S/course/6/sp19/6.894/'>Stellar</a>
+  Spring 2019 &#183; MW230 (32-124) &#183; <a href='https://piazza.com/class/jrc6epsrssu1in'>Piazza</a> &#183; <a href='https://stellar.mit.edu/S/course/6/sp19/6.894/'>Stellar</a>
   <p property='intro' mv-edit-placeholder="(course intro)"></p>
   
 
@@ -142,9 +103,9 @@
       <p>In this assignment, you will design a visualization for a small data set and provide a rigorous rationale for your design choices. You should in theory be ready to explain the contribution of <em>every pixel</em> in the display. You are free to use any graphics or charting tool you please - including drafting it by hand. However, you may find it most instructive to create the chart from scratch using a graphics API of your choice.
       </p>
 
-      <!-- <p>
-        (See <a href="resources.html">Resources</a> for a list of visualization tools.)
-      </p> -->
+      <p>
+        (See <a href="./resources.html">Resources</a> for a list of visualization tools.)
+      </p>
 
       <h2>Data Set: U.S. Population, 1900 vs. 2000</h2>
 
