Styling, content, encoding fixes.

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="pure-u-16-24">
               <p property="title"></p>
               <ul>
-                <li property="readings" mv-multiple>
+                <li class="reading" property="readings" mv-multiple>
                   <small mv-if="required = true">REQUIRED</small>
                   <small mv-if="required != true">Optional</small>
                   <a href="" property="url">[title]. [authors]. <em>[venue]</em>. [year].</a>
@@ -212,9 +212,9 @@
         <h2>Grading</h2>
 
         <ul>
-          <li>Class Participation &ndash; 5%</li>
+          <li><a href="#participation">Class Participation</a> &ndash; 5%</li>
           <li><a href="#readings">Reading Commentaries</a> &ndash; 10%</li>
-          <li>Assignment 1: Visualization Design &ndash; 7.5%</li>
+          <li><a href="A1.html">Assignment 1: Visualization Design</a> &ndash; 7.5%</li>
           <li>Assignment 2: Exploratory Data Analysis &ndash; 12.5%</li>
           <li>Assignment 3: Interactive Visualization Prototype (+ Peer Evaluation) &ndash; 25%</li>
           <li>Final Project &ndash; 40%</li>
