--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>  
     <title>6.894: Interactive Data Visualization (Spring 2019)</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   
     <!-- PureCSS Responsive Grid -->
