--- a/index.html
+++ b/index.html
@@ -152,32 +152,18 @@
 
               <h3>Teaching Staff</h3>
 
-              <div class="staff">
+              <div class="staff" property="staff" mv-multiple>
                 <p>
-                  <em>Instructor</em><br>
-                  <a href="http://arvindsatya.com">Arvind Satyanarayan</a><br>
-                  <a href="mailto:arvindsatya@mit.edu">arvindsatya@mit.edu</a><br>
-                  Fri, 10–11am in 32-G706
+                  <em>[title]</em><br>
+                  <a href="" property="url">[name]</a><br>
+                  <a href="['mailto:' & email]">[email]</a><br>
+                  [officeHours] @ [location]
                 </p>
 
                 <div class="headshot">
-                    <a href="http://arvindsatya.com"><img src="imgs/arvind.jpg" alt="Arvind Satyanarayan (Instructor)"></a>
+                  <img src="['imgs/' & img]" alt="[name] ([title])">
                 </div>
               </div>
-
-              <div class="staff">
-                  <p>
-                    <em>Assistant</em><br>
-                    <a href="http://people.csail.mit.edu/soya/">Soya Park</a><br>
-                    <a href="mailto:soya@mit.edu">soya@mit.edu</a><br>
-                    TBA in 32-G706
-                  </p>
-  
-                  <div class="headshot">
-                      <a href="http://people.csail.mit.edu/soya"><img src="imgs/soya.JPG" alt="Arvind Satyanarayan (Instructor)"></a>
-                  </div>
-                </div>
-
             </div>
           </div>
         </div>
@@ -294,6 +280,6 @@
       
         <button class="mv-login">Login to edit contents</button>
       </div>
-    </div>  
+    </div> 
   </body>
 </html>
