--- a/A1.html
+++ b/A1.html
@@ -105,7 +105,7 @@
                 </div>
               </a>
 
-              <a href="/classes/6.894">
+              <a href="./">
                 <h1>
                   <span class="red">6.894</span>
                   : Interactive Data Visualization
