--- a/A2.html
+++ b/A2.html
@@ -171,7 +171,7 @@
           <h2>Final Deliverable</h2>
 
           <p>
-          Your final submission should take the form of a report – similar to a slide show or comic book – that consists of <strong>10 or more</strong> captioned visualizations detailing your most important insights. Your "insights" can include important surprises or issues (such as data quality problems affecting your analysis) as well as responses to your analysis questions. To help you gauge the scope of this assignment, see <a href="a2-example/">this example report analyzing data about motion pictures</a>.
+          Your final submission should take the form of a report – similar to a slide show or comic book – that consists of <strong>10 or more</strong> captioned visualizations detailing your most important insights. Your "insights" can include important surprises or issues (such as data quality problems affecting your analysis) as well as responses to your analysis questions. To help you gauge the scope of this assignment, see <a href="a2-example.html">this example report analyzing data about motion pictures</a>.
           </p>
 
           <p>
@@ -180,7 +180,7 @@
 
           <p>
           To help formulate your report, we've provided a <a href="a2-template.html" download="">basic HTML template</a> for you to fill in. You will need to edit the HTML to add your captions and links to image files. Exported image files should reside in the same local directory as your HTML file. The end of your report should include a brief summary of main lessons learned.
-          When complete, <a href="https://canvas.uw.edu/courses/1199322/assignments/4140758">submit a zip file to Canvas</a> with your HTML file and visualization screenshot images.
+          When complete, <a href="https://canvas.uw.edu/courses/1199322/assignments/4140758">submit a zip file to Stellar</a> with your HTML file and visualization screenshot images.
           </p>
         </section>
 
