A2-template MIT styling

--- a/A2.html
+++ b/A2.html
@@ -171,7 +171,7 @@
           <h2>Final Deliverable</h2>
 
           <p>
-          Your final submission should take the form of a report – similar to a slide show or comic book – that consists of <strong>10 or more</strong> captioned visualizations detailing your most important insights. Your "insights" can include important surprises or issues (such as data quality problems affecting your analysis) as well as responses to your analysis questions. To help you gauge the scope of this assignment, see <a href="a2-example.html">this example report analyzing data about motion pictures</a>.
+          Your final submission should take the form of a report – similar to a slide show or comic book – that consists of <strong>10 or more</strong> captioned visualizations detailing your most important insights. Your "insights" can include important surprises or issues (such as data quality problems affecting your analysis) as well as responses to your analysis questions. To help you gauge the scope of this assignment, see <a href="./a2-example">this example report analyzing data about motion pictures</a>.
           </p>
 
           <p>
@@ -180,7 +180,7 @@
 
           <p>
           To help formulate your report, we've provided a <a href="a2-template.html" download="">basic HTML template</a> for you to fill in. You will need to edit the HTML to add your captions and links to image files. Exported image files should reside in the same local directory as your HTML file. The end of your report should include a brief summary of main lessons learned.
-          When complete, <a href="https://canvas.uw.edu/courses/1199322/assignments/4140758">submit a zip file to Stellar</a> with your HTML file and visualization screenshot images.
+          When complete, submit a zip file to <a href="https://stellar.mit.edu/S/course/6/sp19/6.894/">Stellar/LMOD</a> with your HTML file and visualization screenshot images.
           </p>
         </section>
 
@@ -202,7 +202,7 @@
             Note that this data set is large, with both many rows and many columns. It is sufficiently rich to support a variety of explorations. If you choose to explore this data set, we <em>strongly</em> encourage you to pick a focus area. Examples include: (1) How do presidential campaigns continue to spend money after the general election? (2) How are the primary Democratic and Republican National Committees spending funds? (3) What are Democratic Party presidential hopefuls doing? (4) What expenditures are occurring across Washington State, and by whom? (5) To what degree is money spent back in politician's home states? To what extent does it go to Beltway consultants? Focusing on any <em>one</em> of these topics should be sufficient for this assignment.
           </p>
           <p>
-            Data: <a href="data/oppexp.csv.gz">oppexp.csv.gz (gzipped CSV)</a>
+            Data: <a href="data/oppexp.csv.gz">oppexp.csv (gzipped CSV)</a>
             <br><br>
           </p>
 
@@ -322,7 +322,7 @@
           </p><p>
 
           </p><p>
-          Your completed exploratory analysis report is due <b>Wednesday 2/27, 11:59pm</b>. You should fill out the <a href="./a2-template.html" download="">provided HTML template</a> and upload to Stellar a zip file containing your completed HTML file and visualization screenshots.
+          Your completed exploratory analysis report is due <b>Wednesday 2/27, 11:59pm</b>. You should fill out the <a href="./a2-template.html" download="">provided HTML template</a> and upload to <a href="https://stellar.mit.edu/S/course/6/sp19/6.894/">Stellar/LMOD</a> a zip file containing your completed HTML file and visualization screenshots.
           </p>
         </section>
 
