--- a/a2-template.html
+++ b/a2-template.html
@@ -1,20 +1,19 @@
 <!DOCTYPE HTML>
 <html xml:lang="en" lang="en">
 <head>
-  <title>CSE512 Assignment 2</title>
+  <title>6.894 Assignment 2</title>
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:500,700|Alegreya+Sans:300,300i,400,400i,500,500i,700,700i"
+      rel="stylesheet">
+  <link rel="stylesheet" href="http://vis.mit.edu/styles.css" type="text/css">
+
   <style>
 * { padding: 0; margin: 0; }
 
-body {
-  margin: 0 auto 0 auto;
-  padding: 0;
-  background-color: #33333f;
-  width: 840px;
-  font-family: "Avenir", "Avenir Next", Helvetica Neue, Arial;
-  font-size: 0.95em;
-}
 
-a, a:visited { text-decoration: none; color: #7533f4; }
+a {
+  color: #A31F34;
+  font-weight: 400;
+}
 a:hover { text-decoration: underline; color: #f4b014; }
 img, a.img, a:hover.img { border: none; }
 
@@ -23,7 +22,7 @@ img {
 }
 
 h1, h2, h3, h4, h5 {
-  color: #492a7c;
+  /*color: #492a7c;*/
   background-color: inherit;
   font-weight: normal;
   padding: 0 0 5px 0;
@@ -41,9 +40,14 @@ hr { border: 0px; border-top: 1px solid #ccc; height: 0px; }
 ol { margin: 1em; }
 
 .content {
-  margin: 0;
+  /*margin: 0;*/
   padding: 15px 20px;
   background-color: #ffffff;
+  border:0;
+  margin: 0 auto 0 auto;
+  padding: 0;
+  width: 840px;
+  font-size: 0.95em;
 }
 
 .article {
@@ -59,6 +63,10 @@ ol { margin: 1em; }
 </head>
 
 <body>
+  <div id="ribbon" class="pure-u-1">
+        <div class="red"></div>
+        <div class="grey"></div>
+      </div>
 <div class='content'>
 
 <section>
@@ -66,7 +74,7 @@ ol { margin: 1em; }
 
   <p>
     <strong>Your Name</strong> &mdash;
-    <em>Your UW Email Address</em>
+    <em>Your MIT Email Address</em>
   </p>
 </section>
 
