A2-template more close to example

--- a/A2.html
+++ b/A2.html
@@ -322,7 +322,7 @@
           </p><p>
 
           </p><p>
-          Your completed exploratory analysis report is due <b>Wednesday 2/27, 11:59pm</b>. You should fill out the <a href="./a2-template.html" download="">provided HTML template</a> and upload to <a href="https://stellar.mit.edu/S/course/6/sp19/6.894/">Stellar/LMOD</a> a zip file containing your completed HTML file and visualization screenshots.
+          Your completed exploratory analysis report is due <b>Wednesday 2/27 noon</b>. You should fill out the <a href="./a2-template.html" download="">provided HTML template</a> and upload to <a href="https://stellar.mit.edu/S/course/6/sp19/6.894/">Stellar/LMOD</a> a zip file containing your completed HTML file and visualization screenshots.
           </p>
         </section>
 
