copy dataset of example to our server

--- a/a2-example/index.html
+++ b/a2-example/index.html
@@ -147,7 +147,7 @@
   <p>
     The data is available online as
     <strong>
-      <a href="http://courses.cs.washington.edu/courses/cse512/data/a2/movies.csv">movies.csv</a>
+      <a href="movies.csv">movies.csv</a>
     </strong>
   </p>
 </section>
