Update to Boston/MA open data portals.

--- a/A2.html
+++ b/A2.html
@@ -246,9 +246,8 @@
           </p>
 
           <ul>
-            <li><a href="https://data.seattle.gov/">data.seattle.gov</a> - City of Seattle Open Data</li>
-            <li><a href="https://data.wa.gov/">data.wa.gov</a> - State of Washington Open Data</li>
-            <li><a href="https://nwdata.org/">nwdata.org</a> - Open Data &amp; Civic Tech Resources for the Pacific Northwest</li>
+            <li><a href="https://data.boston.gov/">data.boston.gov</a> - City of Boston Open Data</li>
+            <li><a href="https://opendata.digital.mass.gov/">MassData</a> - State of Masachussets Open Data</li>
             <li><a href="https://www.data.gov/">data.gov</a> - U.S. Government Open Datasets</li>
             <li><a href="https://www.census.gov/data.html">U.S. Census Bureau</a> - Census Datasets</li>
             <li><a href="https://www.ipums.org/">IPUMS.org</a> - Integrated Census &amp; Survey Data from around the World</li>
