Update submission instructions.

--- a/A2.html
+++ b/A2.html
@@ -321,7 +321,9 @@
           </p><p>
 
           </p><p>
-          Your completed exploratory analysis report is due <b>Wednesday 2/27 noon</b>. You should fill out the <a href="./a2-template.html" download="">provided HTML template</a> and upload to <a href="https://stellar.mit.edu/S/course/6/sp19/6.894/">Stellar/LMOD</a> a zip file containing your completed HTML file and visualization screenshots.
+          Your completed exploratory analysis report is due <b>Wednesday 2/27 noon</b>. 
+          You should fill out the <a href="./a2-template.html" download="">provided HTML template</a> and upload to <a href="https://stellar.mit.edu/S/course/6/sp19/6.894/">Stellar/LMOD</a> a zip file containing your completed HTML file and visualization screenshots.
+          Please name the zip file using the pattern "mitkerberos_a2.zip" (replacing "mitkerberos" with your MIT Kerberos ID – this is the same as your @mit email address, not a numeric id number). 
           </p>
         </section>
 
