Link A2 + credit Nick Diakopoulos for EDA lecture.

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <li><a href="#participation">Class Participation</a> &ndash; 5%</li>
           <li><a href="#readings">Reading Commentaries</a> &ndash; 10%</li>
           <li><a href="A1.html">Assignment 1: Visualization Design</a> &ndash; 7.5%</li>
-          <li>Assignment 2: Exploratory Data Analysis &ndash; 12.5%</li>
+          <li><a href="A2.html">Assignment 2: Exploratory Data Analysis</a> &ndash; 12.5%</li>
           <li>Assignment 3: Interactive Visualization Prototype (+ Peer Evaluation) &ndash; 25%</li>
           <li>Final Project &ndash; 40%</li>
         </ul>
@@ -272,7 +272,7 @@
           <strong>Maneesh Agrawala</strong> at Stanford University, 
           <strong>Hanspeter Pfister</strong> at Harvard University,
           <strong>Tamara Munzner</strong> at the University of British Columbia,
-          <strong>Jessica Hullman</strong> at Northwestern University,
+          <strong>Jessica Hullman</strong> and <strong>Nick Diakopoulos</strong> at Northwestern University,
           <strong>Enrico Bertini</strong> at New York University, and
           <strong>Sheelagh Carpendale</strong> at Simon Fraser University.
 
