Change uw to mit

--- a/A3.html
+++ b/A3.html
@@ -146,7 +146,7 @@
           For this assignment you should work in <strong>teams of 3-4 students</strong>. You should attempt to find project partners that you will continue to work with for the final project.
         </p>
         <p>
-          As soon as you have formed a team and chosen a dataset, you must submit a <a href="https://docs.google.com/forms/d/e/1FAIpQLSfWnI5YiMEpKclQyvDYqk2LM8QHg1Rcb7ascXNtlpuBYvXiCg/viewform?usp=sf_link">team registration form</a>. Your form must include the names, UW email addresses, and GitHub usernames of each team member, along with a concise title for your interactive visualization. If you are looking for project partners, please post to Piazza to find classmates with similar interests! You should submit your team registration by <strong>Mon 3/4, noon</strong>.
+          As soon as you have formed a team and chosen a dataset, you must submit a <a href="https://docs.google.com/forms/d/e/1FAIpQLSfWnI5YiMEpKclQyvDYqk2LM8QHg1Rcb7ascXNtlpuBYvXiCg/viewform?usp=sf_link">team registration form</a>. Your form must include the names, MIT email addresses, and GitHub usernames of each team member, along with a concise title for your interactive visualization. If you are looking for project partners, please post to Piazza to find classmates with similar interests! You should submit your team registration by <strong>Mon 3/4, noon</strong>.
         </p>
         <p>
           After the proposal deadline, we will assign your team a repository in the <a href="https://github.com/mitvis">MIT Vis GitHub Organization</a>. We will name your repository based on the visualization title you provide in your registration form (so choose wisely!). See below for details about what your repository must contain at submission time.
